--- a/diandi/Base.lproj/Main.storyboard
+++ b/diandi/Base.lproj/Main.storyboard
@@ -1,46 +1,77 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3ul-6d-r38">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3ul-6d-r38">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
-            <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS" customClass="Tour">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="hI1-hD-qu2"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="729" y="-275"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="xdW-PH-fzP">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3ul-6d-r38" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="s0j-o6-CXW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="GgJ-k6-prU"/>
+                        <segue destination="p2s-VG-uP9" kind="relationship" relationship="rootViewController" id="OqG-Ql-9wc"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vdT-94-6rb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="-275"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="r1k-P0-yOd">
+            <objects>
+                <viewController id="p2s-VG-uP9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ltj-5A-ReH"/>
+                        <viewControllerLayoutGuide type="bottom" id="sIP-bF-f67"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="coL-Ik-0Ob">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RdI-Iz-W0X">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RdI-Iz-W0X" secondAttribute="height" multiplier="15:8" id="MBl-6r-XPd"/>
+                                    <constraint firstAttribute="width" secondItem="RdI-Iz-W0X" secondAttribute="height" multiplier="15:8" id="S4U-Nr-OwB"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="qDz-Ow-f7b">
+                                <rect key="frame" x="0.0" y="201" width="375" height="471"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qDz-Ow-f7b" firstAttribute="top" secondItem="RdI-Iz-W0X" secondAttribute="bottom" constant="1" id="0Fb-c1-etH"/>
+                            <constraint firstAttribute="centerX" secondItem="qDz-Ow-f7b" secondAttribute="centerX" id="KFV-HM-zD4"/>
+                            <constraint firstItem="qDz-Ow-f7b" firstAttribute="width" secondItem="coL-Ik-0Ob" secondAttribute="width" id="Nl3-0c-72t"/>
+                            <constraint firstItem="sIP-bF-f67" firstAttribute="top" secondItem="qDz-Ow-f7b" secondAttribute="bottom" constant="-5" id="Pxl-6x-8SM"/>
+                            <constraint firstAttribute="centerX" secondItem="RdI-Iz-W0X" secondAttribute="centerX" id="l0o-N3-HaI"/>
+                            <constraint firstItem="RdI-Iz-W0X" firstAttribute="width" secondItem="coL-Ik-0Ob" secondAttribute="width" id="uGD-yI-vAR"/>
+                            <constraint firstItem="RdI-Iz-W0X" firstAttribute="top" secondItem="ltj-5A-ReH" secondAttribute="bottom" constant="-64" id="y5H-G7-gzV"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3WB-Z5-16E"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0xB-Em-bTv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="745.5" y="-275.5"/>
         </scene>
     </scenes>
 </document>
