--- a/diandi/Class/SignFolderView.xib
+++ b/diandi/Class/SignFolderView.xib
@@ -11,12 +11,26 @@
             <rect key="frame" x="0.0" y="-1" width="375" height="565"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xy-wh-m1Y" userLabel="folderGroupView">
-                    <rect key="frame" x="0.0" y="475" width="375" height="90"/>
-                </scrollView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="mRo-p0-NFR" userLabel="imageGroupView">
                     <rect key="frame" x="0.0" y="175" width="375" height="300"/>
-                    <collectionViewLayout key="collectionViewLayout" id="eav-O5-dfQ" customClass="FolderLayout"/>
+                    <collectionViewLayout key="collectionViewLayout" id="yZJ-yd-Caj"/>
+                    <connections>
+                        <outlet property="dataSource" destination="iN0-l3-epB" id="Zpm-ca-IKm"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="CCB-og-vBn"/>
+                    </connections>
+                </collectionView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="lsf-OB-cy1" userLabel="folderGroupView">
+                    <rect key="frame" x="0.0" y="475" width="375" height="90"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wx3-Kt-Ny4">
+                        <size key="itemSize" width="80" height="80"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="iN0-l3-epB" id="xoc-Cr-tD7"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="Lej-9g-l4n"/>
+                    </connections>
                 </collectionView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -25,7 +39,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="folderGroupView" destination="4xy-wh-m1Y" id="Nvw-gU-UPT"/>
+                <outlet property="folderGroupView" destination="lsf-OB-cy1" id="KVO-Ng-tOx"/>
                 <outlet property="imageGroupView" destination="mRo-p0-NFR" id="e8z-uy-sRG"/>
             </connections>
             <point key="canvasLocation" x="286.5" y="320.5"/>
